<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemContainer"
    android:layout_width="@dimen/_88sdp"
    android:layout_height="@dimen/_100sdp"
    android:layout_margin="8dp"
    android:background="@drawable/bg_subscription_default"
    android:clickable="true"
    android:focusable="true"
    android:padding="12dp">


    <!-- Duration -->
    <TextView
        android:id="@+id/textDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:text="@string/seven_day"
        android:textColor="@color/dark_charcoal"
        android:textSize="18sp"
        android:fontFamily="@font/nunito_sans_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Price -->
    <TextView
        android:id="@+id/textPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:text="@string/current_price"
        android:textColor="@color/dark_charcoal"
        android:textSize="16sp"
        android:fontFamily="@font/nunito_sans_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDuration" />

    <!-- Old Price -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textOldPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_price"
        android:textColor="#999999"
        app:layout_constraintTop_toBottomOf="@id/textPrice"
        android:textSize="@dimen/_9sdp"
        android:layout_margin="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
